--- a/Script/Week 3 Assignment.ipynb
+++ b/Script/Week 3 Assignment.ipynb
@@ -991,8 +991,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID = '1XS3AKA2VUSXIPXOS1ARL3WAUXDKQVCQ2EJPDMQRK1HRJUAO' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'GFOONXMNFZC23JZX0MXCFEFZFQP1NA4QVBHGM2GTMQLO1UQD' # your Foursquare Secret\n",
+    "CLIENT_ID = 'xxxx' # your Foursquare ID\n",
+    "CLIENT_SECRET = 'xxxx' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "\n",
     "#print('Your credentails:')\n",
